# DaemonProcessDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/sxy/daemonprocessdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: SignalProcess.cpp  SignalProcess.h  SocketProcess.cpp  SocketProcess.h
app/src/main/java/com/sxy/daemonprocessdemo/: MainActivity.java  ProcessSignalService.java  ProcessSocketService.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sxy/daemonprocessdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
